crates/bit_tests/src/codegen/snapshots/watt_tests__codegen__structs__wrong_struct_with_generics.snap
---
source: crates/bit_tests/src/codegen/structs.rs
expression: "\ntype Box[T] {\n    value: T\n}\n\nfn main() {\n    let a = Box(123);\n    a = Box(\"hello\");\n}\n    "
---
Source code:

type Box[T] {
    value: T
}

fn main() {
    let a = Box(123);
    a = Box("hello");
}
    

Generation result:
typeck::types_missmatch

  × types missmatch. expected `Box[Int]`, got `Box[String]`.

Hint: 
  💡 here...
   ╭─[buggy:8:5]
 7 │     let a = Box(123);
 8 │     a = Box("hello");
   ·     ────────────────
 9 │ }
   ╰────
