crates/bit_tests/src/codegen/snapshots/watt_tests__codegen__structs__wrong_struct_with_generics_2.snap
---
source: crates/bit_tests/src/codegen/structs.rs
expression: "\ntype Box[T] {\n    value: T\n}\n\nfn main() {\n    let a = Box(123);\n    let b: Box[float] = a;\n}\n    "
---
Source code:

type Box[T] {
    value: T
}

fn main() {
    let a = Box(123);
    let b: Box[float] = a;
}
    

Generation result:
typeck::types_missmatch

  × types missmatch. expected `Box[Float]`, got `Box[Int]`.

Hint: 
  💡 here...
   ╭─[buggy:8:5]
 7 │     let a = Box(123);
 8 │     let b: Box[float] = a;
   ·     ─────────────────────
 9 │ }
   ╰────
